[package]
name = "rusty_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
regex = "1.10.3"
lazy_static = "1.4.0"
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
